--- a/home.css
+++ b/home.css
@@ -3,6 +3,16 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+.hidden {
+    opacity: 0;
+    transition: all 1s;
+    filter: blur(5px);
+}
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
 
 /*Phone View*/
 
@@ -23,17 +33,17 @@
     text-align: center;
 }
 .content-top p {
-    padding: 20px;
+    padding: 16px;
     text-align: center;
 }
 
 .content-mid {
     padding: 20px 20px;
     background-color: whitesmoke;
+    font-size: 12px;
 }
 .content-mid img {
-    width: 200px;
-    height: 100px;
+    height: 50px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -44,6 +54,23 @@
 }
 .content-mid .part {
     margin-bottom: 20px;
+}
+
+.content-mid .p-left {
+    margin-left: 120px;
+}
+.content-mid .p-right {
+    margin-right: 120px
+}
+
+.content-mid .img-content-left {
+    width: 100px;
+    float: left;
+}
+
+.content-mid .img-content-right {
+    width: 100px;
+    float: right;
 }
 
 .address {
@@ -84,9 +111,9 @@
 
     .content-mid {
         padding: 50px 100px;
+        font-size: 16px;
     }
     .content-mid img {
-        width: 200px;
         height: 100px;
         border-radius: 5px;
         
@@ -140,6 +167,7 @@
 
     .content-mid {
         padding: 50px 200px;
+        font-size: 20px;
     }
     .content-mid img {
         width: 400px;
